Ya se puede seleccionar el centro de donación y el grupo sanguineo. Si no estan seleccionados no deja continuar. Guarda en preferencias ambos valores. En función de si están fijados estos parametros en preferenicias direcciona a una pantalla  u otra (menu principal o primer inicio). Actualiza el subtitulo del menú principal con la descripción del centro seleccionado.

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -47,6 +47,7 @@
                     android:text="Donación de sangre"
                     android:textColor="#c00"/>
                 <com.ntilde.percentagelayout.PTextView
+                    android:id="@+id/menu_principal_nombre_centro"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
