--- a/app/src/main/res/layout/activity_agenda.xml
+++ b/app/src/main/res/layout/activity_agenda.xml
@@ -6,7 +6,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.ntilde.donantes.Ubicacion">
 
-    <TextView android:text="@string/title_activity_ubicacion" android:layout_width="wrap_content"
+    <TextView android:text="agenda" android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
 </RelativeLayout>
