--- a/app/src/main/res/layout/activity_mensajes.xml
+++ b/app/src/main/res/layout/activity_mensajes.xml
@@ -4,9 +4,9 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.ntilde.donantes.Ubicacion">
+    tools:context="com.ntilde.donantes.Mensajes">
 
-    <TextView android:text="@string/title_activity_ubicacion" android:layout_width="wrap_content"
+    <TextView android:text="Mensajes" android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
 </RelativeLayout>
