--- a/app/src/main/res/layout/activity_mensajes.xml
+++ b/app/src/main/res/layout/activity_mensajes.xml
@@ -1,12 +1,103 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.ntilde.donantes.Mensajes">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context="com.ntilde.donantes.PrimerInicio"
+    android:orientation="vertical"
+    android:gravity="center_horizontal"
+    android:background="#fff"
+    android:id="@+id/iconos_margen_izquierdo">
 
-    <TextView android:text="Mensajes" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <com.ntilde.percentagelayout.PLinearLayout
+        android:id="@+id/mensajes_cabecera"
+        android:layout_width="0px"
+        android:layout_height="0px"
+        app:pl_percentage_height="12.5"
+        app:pl_percentage_width="100"
+        android:orientation="vertical">
+        <com.ntilde.percentagelayout.PLinearLayout
+            android:layout_width="0px"
+            android:layout_height="0px"
+            app:pl_percentage_height="95"
+            app:pl_percentage_width="100"
+            android:orientation="horizontal"
+            android:gravity="center_vertical">
+            <ImageView
+                android:id="@+id/mensajes_logotipo"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_logotipo"
+                android:adjustViewBounds="true"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <com.ntilde.percentagelayout.PTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    app:ptv_height="1"
+                    android:text=" "
+                    android:textColor="#444"/>
+                <com.ntilde.percentagelayout.PTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    app:ptv_height="5"
+                    android:text="Mensajes"
+                    android:textColor="#c00"/>
+                <com.ntilde.percentagelayout.PTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    app:ptv_height="2.2"
+                    android:text="Todo lo que necesitas saber sobre donaciones"
+                    android:textColor="#444"/>
+            </LinearLayout>
+        </com.ntilde.percentagelayout.PLinearLayout>
+        <com.ntilde.percentagelayout.PLinearLayout
+            android:id="@+id/mensajes_borde_rojo_superior"
+            android:layout_width="0px"
+            android:layout_height="0px"
+            app:pl_percentage_height="5"
+            app:pl_percentage_width="100"
+            android:background="#c00">
+        </com.ntilde.percentagelayout.PLinearLayout>
+    </com.ntilde.percentagelayout.PLinearLayout>
 
-</RelativeLayout>
+    <com.ntilde.percentagelayout.PLinearLayout android:layout_width="0px" android:layout_height="0px"
+        android:id="@+id/iconos_margen_superior" app:pl_percentage_height="2.5"></com.ntilde.percentagelayout.PLinearLayout>
+
+
+    <com.ntilde.percentagelayout.PRelativeLayout
+        android:layout_width="0px"
+        android:layout_height="0px"
+        app:pr_percentage_height="74.6"
+        app:pr_percentage_width="100">
+
+        <ListView
+            android:id="@+id/mensajes_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+        <TextView
+            android:id="@+id/mensajes_no_hay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:text="No existen mensajes por ahora."/>
+
+    </com.ntilde.percentagelayout.PRelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/mensajes_borde_rojo_inferior"
+        android:layout_width="match_parent" android:layout_height="0px"
+        android:background="#c00" android:orientation="horizontal">
+    </LinearLayout>
+
+    <com.ntilde.percentagelayout.PLinearLayout android:layout_width="0px" android:layout_height="0px"
+        app:pl_percentage_height="1.5"></com.ntilde.percentagelayout.PLinearLayout>
+
+</LinearLayout>
