--- a/app/src/main/res/layout/activity_informacion.xml
+++ b/app/src/main/res/layout/activity_informacion.xml
@@ -49,7 +49,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="Donación de sangre"
+                    android:text="Información al donante"
                     android:textColor="#c00"
                     app:ptv_height="5"/>
 
@@ -57,7 +57,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="@string/informacion_donante_title"
+                    android:text="Todo lo que necesitas saber sobre donaciones"
                     android:textColor="#444"
                     app:ptv_height="2.2"/>
             </LinearLayout>
