--- a/app/src/main/res/layout/activity_agenda.xml
+++ b/app/src/main/res/layout/activity_agenda.xml
@@ -73,26 +73,67 @@
     <com.ntilde.percentagelayout.PLinearLayout
         android:layout_width="0px"
         android:layout_height="0px"
-        app:pl_percentage_height="75.1"
+        app:pl_percentage_height="73.1"
+        android:background="#fff"
         app:pl_percentage_width="100">
 
-        <com.github.sundeepk.compactcalendarview.CompactCalendarView
-            android:id="@+id/compactcalendar_view"
+        <com.squareup.timessquare.CalendarPickerView
+            android:id="@+id/calendar_view"
             android:layout_width="match_parent"
-            android:paddingRight="10dp"
-            android:paddingLeft="10dp"
             android:layout_height="match_parent"
-            app:compactCalendarTextSize="12sp"
-            app:compactCalendarBackgroundColor="#0000"
-            app:compactCalendarTextColor="#000"
-            app:compactCalendarFirstDayOfMonthBackgroundColor="#0000"
-            app:compactCalendarCurrentDayBackgroundColor="#c00"
             />
     </com.ntilde.percentagelayout.PLinearLayout>
 
 
     <com.ntilde.percentagelayout.PLinearLayout android:layout_width="0px" android:layout_height="0px"
                                                app:pl_percentage_height="2.5"></com.ntilde.percentagelayout.PLinearLayout>
+
+    <com.ntilde.percentagelayout.PLinearLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:pl_percentage_width="100"
+        app:pl_percentage_height="7"
+        android:background="#f44"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <com.ntilde.percentagelayout.PTextView
+            android:id="@+id/agenda_msg_seleccionar_fecha"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:ptv_height="3"
+            android:textColor="#fff"
+            android:text="Seleccione la fecha que desee"/>
+
+        <Button
+            android:id="@+id/agenda_no_done"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:text="No doné"/>
+
+        <Button
+            android:id="@+id/agenda_done_sangre"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:text="Sangre"/>
+
+        <Button
+            android:id="@+id/agenda_done_plasma"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:text="Plasma"/>
+
+        <Button
+            android:id="@+id/agenda_done_plaquetas"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:text="Plaquetas"/>
+
+    </com.ntilde.percentagelayout.PLinearLayout>
 
     <LinearLayout
         android:id="@+id/configuracion_borde_rojo_inferior"
