--- a/app/src/main/res/layout/activity_punto_de_donacion.xml
+++ b/app/src/main/res/layout/activity_punto_de_donacion.xml
@@ -10,7 +10,7 @@
     android:id="@+id/iconos_margen_izquierdo">
 
     <com.ntilde.percentagelayout.PLinearLayout
-        android:id="@+id/configuracion_cabecera"
+        android:id="@+id/punto_de_donacion_cabecera"
         android:layout_width="0px"
         android:layout_height="0px"
         app:pl_percentage_height="12.5"
@@ -24,7 +24,7 @@
             android:orientation="horizontal"
             android:gravity="center_vertical">
             <ImageView
-                android:id="@+id/ubicacion_logotipo"
+                android:id="@+id/punto_de_donacion_logotipo"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:src="@drawable/ic_logotipo"
@@ -45,19 +45,20 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     app:ptv_height="5"
-                    android:text="Dónde donar"
+                    android:text="Punto de donación"
                     android:textColor="#c00"/>
                 <com.ntilde.percentagelayout.PTextView
+                    android:id="@+id/punto_de_donacion_subtitulo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     app:ptv_height="2.2"
-                    android:text="Encuentra los mejores puntos de donación"
+                    android:text="Gestiona tu perfil de usuario y alertas"
                     android:textColor="#444"/>
             </LinearLayout>
         </com.ntilde.percentagelayout.PLinearLayout>
         <com.ntilde.percentagelayout.PLinearLayout
-            android:id="@+id/ubicacion_borde_rojo_superior"
+            android:id="@+id/punto_de_donacion_borde_rojo_superior"
             android:layout_width="0px"
             android:layout_height="0px"
             app:pl_percentage_height="5"
@@ -70,16 +71,13 @@
         android:id="@+id/iconos_margen_superior" app:pl_percentage_height="2.5"></com.ntilde.percentagelayout.PLinearLayout>
 
     <com.ntilde.percentagelayout.PLinearLayout
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="0px"
+        android:layout_height="0px"
         app:pl_percentage_width="100"
-        app:pl_percentage_height="73">
-
-        <fragment
-            android:id="@+id/configuracion_mapa"
-            android:name="com.google.android.gms.maps.SupportMapFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+        app:pl_percentage_height="66"
+        android:background="#00f"
+        app:pl_percentage_padding_left="5"
+        app:pl_percentage_padding_right="5">
 
     </com.ntilde.percentagelayout.PLinearLayout>
 
@@ -91,7 +89,7 @@
         android:layout_height="0dp"
         app:pl_percentage_width="100"
         app:pl_percentage_height="7"
-        android:background="#f44"
+        android:background="#f77"
         android:gravity="center"
         android:orientation="horizontal">
 
@@ -119,8 +117,41 @@
 
     </com.ntilde.percentagelayout.PLinearLayout>
 
+    <com.ntilde.percentagelayout.PLinearLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:pl_percentage_width="100"
+        app:pl_percentage_height="7"
+        android:background="#f44"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <com.ntilde.percentagelayout.PTextView
+            android:id="@+id/ubicacion_msg_seleccionar_punto2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:ptv_height="3"
+            android:textColor="#fff"
+            android:text="Seleccione un punto de donación"/>
+
+        <Button
+            android:id="@+id/ubicacion_informacion2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:text="Ver información"/>
+
+        <Button
+            android:id="@+id/ubicacion_como_llegar2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:text="Cómo llegar"/>
+
+    </com.ntilde.percentagelayout.PLinearLayout>
+
     <LinearLayout
-        android:id="@+id/ubicacion_borde_rojo_inferior"
+        android:id="@+id/punto_de_donacion_borde_rojo_inferior"
         android:layout_width="match_parent" android:layout_height="0px"
         android:background="#c00" android:orientation="horizontal">
     </LinearLayout>
