--- a/app/src/main/res/layout/list_view_item.xml
+++ b/app/src/main/res/layout/list_view_item.xml
@@ -32,7 +32,7 @@
             android:gravity="center_vertical"
             android:padding="16dp"
             android:textColor="#9f9f9f"
-            android:textSize="26sp"
+            android:textSize="15sp"
             android:textStyle="bold"/>
 
     </LinearLayout>
@@ -53,7 +53,8 @@
             android:paddingBottom="20dp"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
-            android:src="@drawable/ic_logotipo"/>
+            android:src="@drawable/ic_logotipo"
+            android:adjustViewBounds="true"/>
 
     </LinearLayout>
 
